<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/simpleCalculatorCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardCornerRadius="15dp"
        android:layout_margin="8dp"
        android:elevation="28dp">

        <!-- Simple Calculator Icon and Text -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/cardColor"
            android:padding="16dp">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_simple_calculator"
                android:contentDescription="@string/simple_calculator_desc"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simple_calculator"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/text_primary"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/binaryConverterCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardCornerRadius="15dp"
        android:layout_margin="8dp"
        android:elevation="8dp">

        <!-- Binary Converter Icon and Text -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/cardColor"
            android:padding="16dp">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_binary_converter"
                android:contentDescription="@string/binary_converter_desc"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binary_converter"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/text_primary"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/unitConverterCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardCornerRadius="15dp"
        android:layout_margin="8dp"
        android:elevation="8dp">

        <!-- Unit Converter Icon and Text -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardColor"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_unit_converter"
                android:contentDescription="@string/unit_converter_desc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_converter"
                android:textStyle="bold"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
