<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/topBar"
            app:title="Unit Converter"
            app:titleTextColor="@color/text_primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/converterCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/cardColor"
                    android:padding="24dp">

                    <!-- Unit Type Dropdown -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/unitTypeLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/unit_type"
                        app:boxStrokeColor="@color/border_color"
                        android:textColorHint="@color/text_primary"
                        android:textStyle="bold">

                        <AutoCompleteTextView
                            android:id="@+id/unitTypeSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:popupBackground="@color/dropdown_background"
                            android:textColor="@color/text_primary" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- From Unit Dropdown -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fromUnitLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        app:boxStrokeColor="@color/border_color"
                        android:textColorHint="@color/text_primary"
                        android:hint="@string/from_input"
                        android:textStyle="bold">

                        <AutoCompleteTextView
                            android:id="@+id/fromUnitSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:popupBackground="@color/dropdown_background"
                            android:textColor="@color/text_primary"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Value -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fromValueLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        app:boxStrokeColor="@color/border_color"
                        android:textColorHint="@color/text_primary"
                        android:hint="@string/input_value"
                        android:textStyle="bold">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fromValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:textColor="@color/text_primary"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <!-- Arrow -->
                    <ImageView
                        android:layout_width="41dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="16dp"
                        android:contentDescription="@string/convert_arrow_description"
                        android:src="@drawable/ic_down_arrow" />

                    <!-- To Unit Dropdown -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/toUnitLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        app:boxStrokeColor="@color/border_color"
                        android:textColorHint="@color/text_primary"
                        android:hint="@string/to_input"
                        android:textStyle="bold">

                        <AutoCompleteTextView
                            android:id="@+id/toUnitSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:popupBackground="@color/dropdown_background"
                            android:textColor="@color/text_primary"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <!-- Converted Value -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/convertedValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/input_default"
                            android:textAlignment="center"
                            android:textColor="@color/text_primary"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:focusable="false"
                            android:clickable="false" />

                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
